Releasing VisualVM 1.3.4 - web
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3064 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,12 @@
             <h3>News</h3>
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
+                
+                <p><span class="news_date">March 21th, 2012:</span> VisualVM 1.3.4 released. This release delivers several bugfixes 
+                    and improvements and builds on top of NetBeans Platform 7.1.1. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release134/visualvm"><code>release134</code></a> branch.
+                </p>
 
                 <p><span class="news_date">December 12th, 2011:</span> JDK 6 Update 30 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.2. Latest JDK 6 update from Oracle can be downloaded
@@ -60,12 +66,6 @@
                     integration with Eclipse IDE to support Eclipse 3.6+. The tool can be downloaded from the
                     <a href="download.html">Download</a> page, sources are available in
                     <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release133/visualvm"><code>release133</code></a> branch.
-                </p>
-
-                <p><span class="news_date">March 3rd, 2011:</span> VisualVM 1.3.2 released. This release delivers several bugfixes 
-                    and necessary updates caused by dev.java.net migration. The tool can be
-                    downloaded from the <a href="download.html">Download</a> page, sources are available in
-                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release132/visualvm"><code>release132</code></a> branch.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
