--- a/www/news.html
+++ b/www/news.html
@@ -71,6 +71,12 @@
             <a name="news"></a>
             <h3>News</h3>
             <div id="news">
+                
+                <p><span class="news_date">March 3rd, 2011:</span> VisualVM 1.3.2 released. This release delivers several bugfixes 
+                    and necessary updates caused by dev.java.net migration. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release132/visualvm"><code>release132</code></a> branch.
+                </p>
 
                 <p><span class="news_date">December 7th, 2010:</span> JDK 6 Update 23 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.1. Latest JDK 6 update from Oracle can be downloaded
