--- a/www/releases.html
+++ b/www/releases.html
@@ -77,10 +77,20 @@
                 <center style="margin-top: 15px; margin-bottom: 15px;">
                     <table id="reltable" border="1">
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
+                        
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.3.4</b><br><small style="margin-left: 10px;">Released: March 21th, 2012, <a href="http://java.net/projects/visualvm/downloads/download/release134/visualvm_134.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release134/visualvm_134-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released yet</div>
+                            </td>
+                        </tr>
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.3.3</b><br><small style="margin-left: 10px;">Released: October 17th, 2011, <a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_133.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_133-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.3</b><br><small style="margin-left: 10px;">Released: October 17th, 2011, <a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_133.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release133/visualvm_133-ml.zip">ml</a>), <a href="relnotes133.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
