--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -103,7 +103,7 @@
                 <p style="margin-top: 5px;">
                     <b>Features and enhancements:</b><br>
                     <ul>
-                        <li>Support for JDK 8.
+                        <li><a href="http://java.net/jira/browse/VISUALVM-490">Issue 490</a>: Support for JDK 8.
                         </li>
                         
                         <li><a href="http://java.net/jira/browse/VISUALVM-495">Issue 495</a>: '&lt;Unknown Application&gt;' now displayed as 'Local Application' and 'Remote Application'
