--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -108,6 +108,16 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>VisualVM 1.3.4</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release134/updates.xml">http://visualvm.java.net/uc/release134/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
                                     <div><b>VisualVM 1.3.3</b></div>
                                 </td>
 
@@ -216,6 +226,26 @@
                             <tr><th colspan="2"><b>Java VisualVM</b></th></tr>
 
                             <tr><th><b><small>Release</small></b></th><th><b><small>Plugins Center</small><br></b></th></tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 7 Update 3</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 31</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 30</b></div>
+                                    <hr>
+                                    <div><b>JDK 7 Update 2</b></div>
+                                    <hr>
+                                    <div><b>JDK 7 Update 1</b></div>
+                                    <hr>
+                                    <div><b>JDK 7</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7/updates.xml">http://visualvm.java.net/uc/7/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
 
                             <tr>
                                 <td class="release">
