--- a/www/news.html
+++ b/www/news.html
@@ -71,6 +71,13 @@
             <a name="news"></a>
             <h3>News</h3>
             <div id="news">
+
+                <p><span class="news_date">October 17th, 2011:</span> VisualVM 1.3.3 released. This release is built on
+                    NetBeans Platform 7.0.1 and delivers several new features and a lot of bugfixes. It also updates the
+                    integration with Eclipse IDE to support Eclipse 3.6+. The tool can be downloaded from the
+                    <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release133/visualvm"><code>release133</code></a> branch.
+                </p>
                 
                 <p><span class="news_date">March 3rd, 2011:</span> VisualVM 1.3.2 released. This release delivers several bugfixes 
                     and necessary updates caused by dev.java.net migration. The tool can be
