--- a/www/releases.html
+++ b/www/releases.html
@@ -94,7 +94,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 7 Update 4</b><br><small style="margin-left: 10px;">Released: April 26th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u4-relnotes-1575007.html">Release Notes</a></small></div>
                             </td>
                         </tr>
 
