--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
                 
+                <p><span class="news_date">April 26th, 2012:</span> JDK 7 Update 4 released, it contains Java VisualVM tool
+                    based on VisualVM 1.3.3. Latest JDK 7 update from Oracle can be downloaded
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
+                </p>
+
                 <p><span class="news_date">March 21th, 2012:</span> VisualVM 1.3.4 released. This release delivers several bugfixes 
                     and improvements and builds on top of NetBeans Platform 7.1.1. The tool can be
                     downloaded from the <a href="download.html">Download</a> page, sources are available in
@@ -59,13 +64,6 @@
                 <p><span class="news_date">December 12th, 2011:</span> JDK 6 Update 30 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.2. Latest JDK 6 update from Oracle can be downloaded
                     <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
-                </p>
-
-                <p><span class="news_date">October 17th, 2011:</span> VisualVM 1.3.3 released. This release is built on
-                    NetBeans Platform 7.0.1 and delivers several new features and a lot of bugfixes. It also updates the
-                    integration with Eclipse IDE to support Eclipse 3.6+. The tool can be downloaded from the
-                    <a href="download.html">Download</a> page, sources are available in
-                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release133/visualvm"><code>release133</code></a> branch.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
