--- a/www/releases.html
+++ b/www/releases.html
@@ -84,7 +84,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 7 Update 6</b><br><small style="margin-left: 10px;">Released: August 14th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u6-relnotes-1729681.html">Release Notes</a></small></div>
                             </td>
                         </tr>
 
