--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">December 12th, 2011:</span> JDK 6 Update 30 released, it contains Java VisualVM tool
+                    based on VisualVM 1.3.2. Latest JDK 6 update from Oracle can be downloaded
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
+                </p>
+
                 <p><span class="news_date">October 17th, 2011:</span> VisualVM 1.3.3 released. This release is built on
                     NetBeans Platform 7.0.1 and delivers several new features and a lot of bugfixes. It also updates the
                     integration with Eclipse IDE to support Eclipse 3.6+. The tool can be downloaded from the
