old links to dev.java.net bugzilla fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3110 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-charts.html
+++ b/www/api-charts.html
@@ -297,8 +297,8 @@
         
         <h3>Quick Links</h3>
         <div>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">Report a Bug</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=2">Request a Feature</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">Report a Bug</a>
             <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
             <a href="http://visualvm.java.net/api-quickstart.html">Developer Documentation</a>
             <a href="http://visualvm.java.net/nonav/apidocs/13/index.html">API Documentation</a>
