--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -127,7 +127,7 @@
                 <div>
                     <a href="features.html">VisualVM Features</a>
                     <a href="download.html">Download VisualVM</a>
-                    <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
+                    <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=2">Request a Feature</a>
                     <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
                 </div>
 
