--- a/www/features.html
+++ b/www/features.html
@@ -195,7 +195,7 @@
             <a href="javascript:showScreenshots();">Screenshots</a>
             <a href="plugins.html">Plugins</a>
             <a href="relnotes.html#system_requirements">System Requirements</a>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=2">Request a Feature</a>
             <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
         
