--- a/www/index.html
+++ b/www/index.html
@@ -93,8 +93,8 @@
         <div>
             <a href="gettingstarted.html">Getting Started</a>
             <a href="troubleshooting.html">Troubleshooting Guide</a>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">Report a Bug</a>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">Report a Bug</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=2">Request a Feature</a>
             <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
 
