--- a/www/news.html
+++ b/www/news.html
@@ -175,7 +175,7 @@
                     <a href="http://java.net/downloads/visualvm/release12/visualvm_12_testbuild.zip">Download it</a>,
                     try out the new features and let the developers know: send your feedback to
                     <a href="mailto:feedback@visualvm.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.java.net</a>
-                    or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
+                    or <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">file a bug report</a> into
                     the Issue Tracker (dev.java.net login is required).
                 </p>
 
