--- a/www/plugins.html
+++ b/www/plugins.html
@@ -271,7 +271,7 @@
         <div>
             <a href="features.html">Features</a>
             <a href="api-quickstart.html">Developer Documentation</a>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=2">Request a Feature</a>
             <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
         
