--- a/www/relnotes12tb.html
+++ b/www/relnotes12tb.html
@@ -49,7 +49,7 @@
             </p>
             
             <p style="margin-bottom: 15px;">
-                VisualVM 1.2 Test Build is a public development build released for testing and evaluation purposes. Please try out the new features and let the developers know: you can send your feedback to <a href="mailto:feedback@visualvm.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.java.net</a> or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into the Issue Tracker (dev.java.net login is required). List of changes and bugfixes since the VisualVM 1.1.1 is available in the <a href="#changes">Changes In 1.2</a> section.
+                VisualVM 1.2 Test Build is a public development build released for testing and evaluation purposes. Please try out the new features and let the developers know: you can send your feedback to <a href="mailto:feedback@visualvm.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.java.net</a> or <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">file a bug report</a> into the Issue Tracker (dev.java.net login is required). List of changes and bugfixes since the VisualVM 1.1.1 is available in the <a href="#changes">Changes In 1.2</a> section.
             </p>
             
             <a name="system_requirements"></a>
