--- a/www/download.html
+++ b/www/download.html
@@ -126,7 +126,7 @@
                 
                 <p style="margin-bottom: 15px;">
                 If you are experiencing other problems or you need more details, try to find a solution in the <a href="troubleshooting.html">Troubleshooting Guide</a>.
-                If it doesn't help, you may ask for help on a <a href="mailto:users@visualvm.java.net">mailing list</a> or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a>
+                If it doesn't help, you may ask for help on a <a href="mailto:users@visualvm.java.net">mailing list</a> or <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">file a bug report</a>
                 (you need to be registered to access the mailing list or file a bug report).
                 </p>
             </div>
@@ -149,7 +149,7 @@
             <a href="gettingstarted.html">Getting Started</a>
             <a href="troubleshooting.html">Troubleshooting Guide</a>
             <a href="releases.html">Releases Overview</a>
-            <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">Report a Bug</a>
+            <a href="http://java.net/jira/secure/CreateIssue.jspa?pid=10598&issuetype=1">Report a Bug</a>
             <a href="mailto:feedback@visualvm.java.net">Send Feedback</a>
         </div>
         
