JDK 7u6, 7u7, 7u9, JDK 6u34, 6u35, 6u37 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3135 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -84,6 +84,10 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 9</b><br><small style="margin-left: 10px;">Released: October 16th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u9-relnotes-1863279.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 7</b><br><small style="margin-left: 10px;">Released: August 30th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u7-relnotes-1835816.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 6</b><br><small style="margin-left: 10px;">Released: August 14th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u6-relnotes-1729681.html">Release Notes</a></small></div>
                             </td>
                         </tr>
@@ -106,6 +110,12 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 37</b><br><small style="margin-left: 10px;">Released: October 16th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u37-relnotes-1863283.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 6 Update 35</b><br><small style="margin-left: 10px;">Released: August 30th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u35-relnotes-1835788.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 6 Update 34</b><br><small style="margin-left: 10px;">Released: August 14th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u34-relnotes-1729733.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 33</b><br><small style="margin-left: 10px;">Released: June 6th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u33-relnotes-1653258.html">Release Notes</a></small></div>
                                 <hr>
                                  <div><b>JDK 6 Update 32</b><br><small style="margin-left: 10px;">Released: April 26th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u32-relnotes-1578471.html">Release Notes</a></small></div>
