--- a/www/news.html
+++ b/www/news.html
@@ -71,6 +71,12 @@
             <a name="news"></a>
             <h3>News</h3>
             <div id="news">
+                
+                <p><span class="news_date">March 21th, 2012:</span> VisualVM 1.3.4 released. This release delivers several bugfixes 
+                    and improvements and builds on top of NetBeans Platform 7.1.1. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release134/visualvm"><code>release134</code></a> branch.
+                </p>
 
                 <p><span class="news_date">December 12th, 2011:</span> JDK 6 Update 30 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.2. Latest JDK 6 update from Oracle can be downloaded
