--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -229,17 +229,11 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 7 Update 3</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 31</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 30</b></div>
-                                    <hr>
-                                    <div><b>JDK 7 Update 2</b></div>
-                                    <hr>
-                                    <div><b>JDK 7 Update 1</b></div>
+                                    <div><b>JDK 7 Update 1 ~ 9</b></div>
                                     <hr>
                                     <div><b>JDK 7</b></div>
+                                    <hr>
+                                    <div><b>JDK 6 Update 30 ~ 37</b></div>
                                 </td>
 
                                 <td class="plugincenter">
@@ -249,19 +243,7 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 6 Update 29</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 28</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 27</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 26</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 25</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 24</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 23</b></div>
+                                    <div><b>JDK 6 Update 23 ~ 29</b></div>
                                 </td>
 
                                 <td class="plugincenter">
@@ -271,9 +253,7 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 6 Update 22</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 21</b></div>
+                                    <div><b>JDK 6 Update 21 & 22</b></div>
                                 </td>
 
                                 <td class="plugincenter">
@@ -283,11 +263,7 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 6 Update 20</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 19</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 18</b></div>
+                                    <div><b>JDK 6 Update 18 ~ 20</b></div>
                                 </td>
 
                                 <td class="plugincenter">
@@ -297,13 +273,7 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 6 Update 17</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 16</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 15</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 14</b></div>
+                                    <div><b>JDK 6 Update 14 ~ 17</b></div>
                                 </td>
 
                                 <td class="plugincenter">
@@ -313,11 +283,7 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 6 Update 13</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 12</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 11</b></div>
+                                    <div><b>JDK 6 Update 11 ~ 13</b></div>
                                 </td>
 
                                 <td class="plugincenter">
@@ -327,9 +293,7 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 6 Update 10</b></div>
-                                    <hr>
-                                    <div><b>JDK 6 Update 7</b></div>
+                                    <div><b>JDK 6 Update 7 & 10</b></div>
                                 </td>
 
                                 <td class="plugincenter">
