--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
                 
+                <p><span class="news_date">November 13th, 2012:</span> VisualVM 1.3.5 released. This release delivers a lot of bugfixes 
+                    and improvements and builds on top of NetBeans Platform 7.2.1. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release135/visualvm"><code>release135</code></a> branch.
+                </p>
+                
                 <p><span class="news_date">August 14th, 2012:</span> JDK 7 Update 6 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.4. Latest JDK 7 update from Oracle can be downloaded
                     <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
@@ -58,12 +64,6 @@
                 <p><span class="news_date">April 26th, 2012:</span> JDK 7 Update 4 released, it contains Java VisualVM tool
                     based on VisualVM 1.3.3. Latest JDK 7 update from Oracle can be downloaded
                     <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">here</a>.
-                </p>
-
-                <p><span class="news_date">March 21th, 2012:</span> VisualVM 1.3.4 released. This release delivers several bugfixes 
-                    and improvements and builds on top of NetBeans Platform 7.1.1. The tool can be
-                    downloaded from the <a href="download.html">Download</a> page, sources are available in
-                    <a href="http://java.net/projects/visualvm/sources/svn/show/branches/release134/visualvm"><code>release134</code></a> branch.
                 </p>
 
                <p class="previous_link"><a href="news.html">news archive</a>
