--- a/www/releases.html
+++ b/www/releases.html
@@ -80,7 +80,17 @@
                         
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.3.4</b><br><small style="margin-left: 10px;">Released: March 21th, 2012, <a href="http://java.net/projects/visualvm/downloads/download/release134/visualvm_134.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release134/visualvm_134-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.5</b><br><small style="margin-left: 10px;">Released: November 13th, 2012, <a href="http://java.net/projects/visualvm/downloads/download/release135/visualvm_135.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release135/visualvm_135-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released yet</div>
+                            </td>
+                        </tr>
+                        
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.3.4</b><br><small style="margin-left: 10px;">Released: March 21th, 2012, <a href="http://java.net/projects/visualvm/downloads/download/release134/visualvm_134.zip">Download</a> (<a href="http://java.net/projects/visualvm/downloads/download/release134/visualvm_134-ml.zip">ml</a>), <a href="relnotes134.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
