--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -111,6 +111,9 @@
 
                         <li><a href="http://java.net/jira/browse/VISUALVM-517">Issue 517</a>: Open .npss files in timeline
                         </li>
+                        
+                        <li>UI appearance improvements
+                        </li>
 
                         <li><a href="http://netbeans.org/bugzilla/show_bug.cgi?id=55485">NB Issue 55485</a>: Allow filtering treetable results
                         </li>
