--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 10</b><br><small style="margin-left: 10px;">Released: December 11th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u10-relnotes-1880995.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 9</b><br><small style="margin-left: 10px;">Released: October 16th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u9-relnotes-1863279.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 7</b><br><small style="margin-left: 10px;">Released: August 30th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u7-relnotes-1835816.html">Release Notes</a></small></div>
@@ -120,6 +122,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 38</b><br><small style="margin-left: 10px;">Released: December 11th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u38-relnotes-1880997.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 37</b><br><small style="margin-left: 10px;">Released: October 16th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u37-relnotes-1863283.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 35</b><br><small style="margin-left: 10px;">Released: August 30th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u35-relnotes-1835788.html">Release Notes</a></small></div>
