WWW - Linked the CRaSH plugin
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3183 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugins.html
+++ b/www/plugins.html
@@ -220,9 +220,16 @@
 
                 <hr/>
 
-                <p style="margin-bottom: 10px;"><a href="images/osgi.jpg" rel="lightbox[plugins]" title="OSGi Plugin."><img src="images/osgi_thumb.jpg"/></a><b>OSGi Plugin.</b>
+                <p><a href="images/osgi.jpg" rel="lightbox[plugins]" title="OSGi Plugin."><img src="images/osgi_thumb.jpg"/></a><b>OSGi Plugin.</b>
                 A plugin to enable basic management of OSGi platforms via JMX. For detailed description and installation instructions visit the <a href="http://wiki.chameleon.ow2.org/xwiki/bin/view/Main/AdminTools">plugin page</a>.<br>
                 <i>Available on VisualVM Plugins Center</i>
+                </p>
+                
+                <hr/>
+
+                <p style="margin-bottom: 10px;"><a href="images/crash.jpg" rel="lightbox[plugins]" title="CRaSH Plugin."><img src="images/crash_thumb.jpg"/></a><b>CRaSH Plugin.</b>
+                A plugin to support the CRaSH open source shell for the Java Platform in VisualVM. For detailed description and installation instructions visit the <a href="http://www.crashub.org/#visualvm">plugin page</a>.<br>
+                <i>Available on vendor Plugins Center</i>
                 </p>
 
             </div>
