visualgc link updated
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3184 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugins.html
+++ b/www/plugins.html
@@ -107,7 +107,7 @@
 
                 <p><a href="images/visualgc.jpg" rel="lightbox[plugins]" title="Visual GC Plugin."><img src="images/visualgc_thumb.jpg"/></a><b>Visual GC Plugin.</b>
                 Integration of the Visual GC tool into VisualVM. Visual GC attaches to an application and collects and graphically displays garbage collection, class loader, and HotSpot compiler performance data.
-                See <a href="http://java.sun.com/performance/jvmstat/visualgc.html">Visual GC page</a> for more information.<br>
+                See <a href="http://www.oracle.com/technetwork/java/visualgc-136680.html">Visual GC page</a> for more information.<br>
                 <i>Available on VisualVM Plugins Center</i>
                 </p>
 
