JDK 7u11, JDK 7u13 and JDK 6u39 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3187 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,10 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 13</b><br><small style="margin-left: 10px;">Released: February 1st, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u13-relnotes-1902884.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 11</b><br><small style="margin-left: 10px;">Released: January 13th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u11-relnotes-1896856.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 10</b><br><small style="margin-left: 10px;">Released: December 11th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u10-relnotes-1880995.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 9</b><br><small style="margin-left: 10px;">Released: October 16th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/7u9-relnotes-1863279.html">Release Notes</a></small></div>
@@ -122,6 +126,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 39</b><br><small style="margin-left: 10px;">Released: February 1st, 2013, <a href="http://www.oracle.com/technetwork/java/javase/6u39-relnotes-1902886.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 38</b><br><small style="margin-left: 10px;">Released: December 11th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u38-relnotes-1880997.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 37</b><br><small style="margin-left: 10px;">Released: October 16th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u37-relnotes-1863283.html">Release Notes</a></small></div>
