--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 15</b><br><small style="margin-left: 10px;">Released: February 19th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u15-relnotes-1907738.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 13</b><br><small style="margin-left: 10px;">Released: February 1st, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u13-relnotes-1902884.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 11</b><br><small style="margin-left: 10px;">Released: January 13th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u11-relnotes-1896856.html">Release Notes</a></small></div>
@@ -126,6 +128,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 41</b><br><small style="margin-left: 10px;">Released: February 19th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/6u41-relnotes-1907743.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 39</b><br><small style="margin-left: 10px;">Released: February 1st, 2013, <a href="http://www.oracle.com/technetwork/java/javase/6u39-relnotes-1902886.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 38</b><br><small style="margin-left: 10px;">Released: December 11th, 2012, <a href="http://www.oracle.com/technetwork/java/javase/6u38-relnotes-1880997.html">Release Notes</a></small></div>
