WWW - Korean translation of gettingstarted.html and intro.html
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3192 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -7,8 +7,9 @@
         <hr>
 
         <p>
-            <small>Note: this page is also available in <a href="ja/gettingstarted.html">Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/></a>
-            and <a href="zh_CN/gettingstarted.html">Simplified Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/></a>.</small>
+            <small>Note: this page is also available in <a href="ja/gettingstarted.html">Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/></a>,
+            <a href="zh_CN/gettingstarted.html">Simplified Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/></a> and
+            <a href="ko_KR/gettingstarted.html">Korean <img src="ko_KR/images/korean.png" style="border: 0px; vertical-align: bottom;"/></a>.</small>
         </p>
 
         <p>VisualVM provides detailed information about Java applications while they are running on the Java Virutal Machine (JVM). 
