--- a/www/intro.html
+++ b/www/intro.html
@@ -7,8 +7,9 @@
         <hr />
 
         <p>
-            <small>Note: this page is also available in <a href="ja/intro.html">Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/></a>
-            and <a href="zh_CN/intro.html">Simplified Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/></a>.</small>
+            <small>Note: this page is also available in <a href="ja/intro.html">Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/></a>,
+            <a href="zh_CN/intro.html">Simplified Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/></a> and
+            <a href="ko_KR/intro.html">Korean <img src="ko_KR/images/korean.png" style="border: 0px; vertical-align: bottom;"/></a>.</small>
         </p>
 
         <p>VisualVM is a tool that provides a visual interface for viewing detailed information about Java technology-based applications 
