--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -28,11 +28,25 @@
         <br>
         
         <h3>Installing VisualVM</h3>
-        <ol>
+        <ul>
             <li>Download the VisualVM installer from the <a href="http://visualvm.java.net/">VisualVM project page</a>.</li>
-            <li>Extract the VisualVM installer to your local system.</li>
-            <li>Navigate to the <tt>bin</tt> directory of the VisualVM installation directory and launch the application.</li>
-        </ol>    
+            <li>Extract the VisualVM installer to an empty directory on your local system.</li>
+        </ul>
+        
+        <a name="starting_visualvm"></a>
+        <h3>Starting VisualVM</h3>
+        <p>To start VisualVM on Windows, run the <code>visualvm.exe</code> program that is in the
+            <code>\bin</code> folder under the VisualVM install folder.  
+            On Unix or Linux use the visualvm shell script that is in the <code>/bin</code>
+            folder under the VisualVM install folder. You may specify the JDK which runs VisualVM
+            and/or user directory using command line parameters or by modifying <code>etc\visualvm.conf</code>
+            file. Example command for starting VisualVM with custom JDK and userdir on Windows is:
+        </p>
+        <p>
+          <pre>
+  visualvm.exe --jdkhome "C:\Software\Java\jdk1.6.0" --userdir "C:\Temp\visualvm_userdir"
+          </pre>
+        </p>
 
         <h3>Using the Applications Window</h3>
         <p>The main window of VisualVM opens when you launch the application.
