--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -57,7 +57,7 @@
     <div id="contents_contents">
         <div id="contents_main">
 
-            <h1>VisualVM 1.3.2 Troubleshooting Guide</h1>
+            <h1>VisualVM Troubleshooting Guide</h1>
 
             <p style="margin-bottom: 15px;">
                 This document describes the most common problems related to using VisualVM and information on how to fix or workaround the problems.
@@ -101,7 +101,7 @@
             <h4>Error Starting VisualVM (Error Dialog During Startup)</h4>
             <p><b>Description:&nbsp;</b>'Error Starting VisualVM' dialog is shown during VisualVM startup with a message about an unsupported version of Java.</p>
             <p><b>Resolution:&nbsp;&nbsp;</b>VisualVM runs only on JDK 6 or 7 (not the JRE). When started on JRE or incorrect JDK version, VisualVM shows this dialog and terminates. To define which JDK will be used for running VisualVM, follow the steps in
-            Getting Started section of the <a href="description.html#getting_started">Introduction to VisualVM</a> document.</p><br>
+            the Starting VisualVM section of the <a href="gettingstarted.html#starting_visualvm">Getting Started with VisualVM</a> document.</p><br>
 
             <a name="cleandir"></a>
             <h4>Warning - could not install some modules (Error Dialog During Startup)</h4>
@@ -145,7 +145,7 @@
             <p><b>Description:&nbsp;</b>There are no running applications shown for remote host in the Applications window on the left side.</p>
             <p><b>Resolution:&nbsp;&nbsp;</b>Make sure that the <code>jstatd</code> utility is running on the remote host you want to monitor.
                 This is a requirement for VisualVM to be able to discover and access remote Java applications. More information about <code>jstatd</code> can be found
-            in the Remote Applications section of the <a href="description.html#remote_applications">Introduction to VisualVM</a> document.</p>
+            in the <a href="applications_remote.html">Working with Remote Applications</a> document.</p>
             <p><b>Known limitation:&nbsp;</b>In this VisualVM release the <code>jstatd</code>'s default <code>port</code> and <code>rminame</code> must
             be used when starting the <code>jstatd</code> utility, i.e. the use of the <code>-p</code> and <code>-n</code> options is not supported.</p><br>
 
