WWW - Updated Korean docs, linked full Korean mirror
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3199 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/docindex.html
+++ b/www/docindex.html
@@ -30,7 +30,7 @@
             
             <p style="margin-bottom: 15px;">
                 This page contains links to articles, documentation, blogs, presentations
-        and wiki pages with information for users and developers of VisualVM.
+        and wiki pages with information for users and developers of VisualVM (<small><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/docindex.html">external mirror in Korean <img src="ko_KR/images/korean.png" style="border: 0px; vertical-align: bottom;"/></a></small>).
             </p>
             
             <a name="getting_started"></a>
