--- a/www/ko_KR/gettingstarted.html
+++ b/www/ko_KR/gettingstarted.html
@@ -1,34 +1,35 @@
+<!-- translated by LeeDongGuk (fromm0@gmail.com, http://ldg.pe.kr) -->
 <html>
   <head>
-    <title>VisualVM 시작하기</title>
+    <title>VisualVM 시작</title>
   </head>
-  <body>  
-    <h1>VisualVM 시작하기</h1>
+  <body>
+    <h1>VisualVM 시작</h1>
     <hr />
 
     <p>VisualVM은 자바 애플리케이션이 자바 가상머신(JVM)에서 실행중인 동안 세부적인 정보를 제공한다. 
             VisualVM의 그래픽 사용자 인터페이스는 여러개의 자바 애플리케이션에 대한 정보를 빠르고 쉽게 보여준다. </p>
 
-    <p>이 시작하기 문서는 VisualVM을 사용을 쉽게 시작하기 위해 도움이 될 것이다. 
+    <p>이 시작문서는 VisualVM을 사용을 쉽게 시작하기 위해 도움이 될 것이다. 
             이 문서는 VisualVM을 설치하는 방법을 보여주고 VisualVM업데이트 센터에서 플러그인을 설치해서 기능을 추가하는 방법또한 보여준다. 
             이 문서는 VisualVM을 시작하는 방법을 보여주고 로컬및 원격 JVM에서 실행중인 애플리케이션의 정보를 보는 방법을 설명한다. </p>
 
     <br />
 
-    <h3>VisualVM 사용하기</h3>
+    <h3>VisualVM 사용</h3>
     <p>짧은 스크린캐스르를 먼저 보고 VisualVM의 기능을 알아보자. </p>
     <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="330"></embed></p>
 
     <br />
 
-    <h3>VisualVM 설치하기</h3>
+    <h3>VisualVM 설치</h3>
     <ol>
         <li><a href="http://visualvm.java.net/">VisualVM 프로젝트 페이지</a>에서 인스톨러를 다운로드한다. </li>
         <li>로컬 시스템에서 VisualVM 인스톨러를 압축해제한다. </li>
         <li>VisualVM 설치 디렉터리의 <tt>bin</tt>디렉터리로 이동해서 애플리케이션을 실행한다. </li>
     </ol>    
 
-    <h3>Applications 창 사용하기</h3>
+    <h3>Applications 창 사용</h3>
     <p>VisualVM의 메인창은 실행한 애플리케이션을 보여준다. 
             기본적으로 Applications창은 메인창의 왼쪽에 보여진다. 
             Applications창은 로컬과 원격 JVM에서 실행중인 자바 애플리케이션을 빠르게 보여준다. </p>
@@ -38,7 +39,7 @@
 
     <p>애플리케이션에 대한 데이터를 보거나 저장하기 위해 Applications창을 다루는 방법을 좀더 알기 위해서는 다음 페이지를 보자. </p>
     <ul>
-        <li><a href="../applications_window.html">Applications 창 사용하기</a></li>
+        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_window.html">Applications 창 사용</a></li>
     </ul>
 
     <h3>힙 덤프 살펴보기</h3>
@@ -66,7 +67,7 @@
 
     <p>좀더 세부적인 정보를 보기 위해서는 아래 문서를 보라. </p>
     <ul>
-        <li><a href="../heapdump.html">햅덤프 살펴보기</a></li>
+        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/heapdump.html">햅덤프 살펴보기</a></li>
     </ul>
 
     <h3>애플리케이션 프로파일링</h3>
@@ -88,7 +89,7 @@
 
     <p>VisualVM을 사용한 프로파일링에 대해 좀더 많은 것을 알고 싶다면 다음 문서를 보라. </p>
     <ul>
-        <li><a href="../profiler.html">애플리케이션 프로파일링</a></li>
+        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/profiler.html">애플리케이션 프로파일링</a></li>
     </ul>
 
     <h3>원격 호스트에 연결</h3>
@@ -101,7 +102,7 @@
             원격 호스트에서 실행중인 애플리케이션을 프로파일링할수는 없다. </p>
     <ol>
         <li>Applications 창에서 Remote에 마우스 오른쪽 버튼을 클릭하고 Add Remote Host메뉴를 선택한다. </li>
-        <li>Add Remote Host 다이얼로그 박스에서, 원격 서버의 호스트명과 아이피 주소를 넣는다. </li>
+        <li>Add Remote Host 다이얼로그 박스에서, 원격호스트의 호스트명과 아이피 주소를 넣는다. </li>
         <li>(선택사항) 원격 호스트의 표시이름(display name)을 넣는다. 이 이름은 Applications 창에 표기되는 문자열이다. 
                     표시이름을 넣지 않으면, 호스트명이 사용된다. </li>
         <li>OK를 클릭한다. </li>
@@ -113,7 +114,7 @@
 
     <p>좀더 많은 정보를 보고 싶다면 아래 문서를 보라.</p>
     <ul>
-        <li><a href="../applications_remote.html">원격 애플리케이션을 사용하기</a></li>
+        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_remote.html">원격 애플리케이션을 사용</a></li>
     </ul>
 
     <h3>VisualVM 플러그인 설치</h3>
@@ -133,7 +134,7 @@
             VisualVM은 로컬과 원격 JVM에 실행되는 자바 애플리케이션의 정보를 쉽게 찾아보기 위한 시각적인 인터페이스로 디자인되었다. 
             VisualVM기능에 대한 좀더 상세한 정보는 보기 위해서는 아래의 문서를 보라.</p>
     <ul>
-        <li><a href="http://visualvm.java.net/docindex.html">VisualVM 문서와 관련 자료들</a>.</li>
+        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/docindex.html">VisualVM 문서와 관련 자료들</a>.</li>
     </ul>
   </body>
 </html>
