--- a/www/legal/gplv2+ce.html
+++ b/www/legal/gplv2+ce.html
@@ -285,7 +285,7 @@ pointer to where the full notice is found.
 
     One line to give the program's name and a brief idea of what it does.
 
-    Copyright (C) <year> <name of author>
+    Copyright (C) &lt;year&gt; &lt;name of author&gt;
 
     This program is free software; you can redistribute it and/or modify it
     under the terms of the GNU General Public License as published by the Free
