--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -108,6 +108,16 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>VisualVM 1.3.5</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release135/updates.xml">http://visualvm.java.net/uc/release135/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
                                     <div><b>VisualVM 1.3.4</b></div>
                                 </td>
 
