JDK 7u21 and JDK 6u45 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3205 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -94,6 +94,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 7 Update 21</b><br><small style="margin-left: 10px;">Released: April 16th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u21-relnotes-1932873.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 7 Update 17</b><br><small style="margin-left: 10px;">Released: March 4th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u17-relnotes-1915289.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 15</b><br><small style="margin-left: 10px;">Released: February 19th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/7u15-relnotes-1907738.html">Release Notes</a></small></div>
@@ -130,6 +132,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 45</b><br><small style="margin-left: 10px;">Released: April 16th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/6u45-relnotes-1932876.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 43</b><br><small style="margin-left: 10px;">Released: March 4th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/6u43-relnotes-1915290.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 41</b><br><small style="margin-left: 10px;">Released: February 19th, 2013, <a href="http://www.oracle.com/technetwork/java/javase/6u41-relnotes-1907743.html">Release Notes</a></small></div>
