JDK 7u6+ and JDK 6u43 added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3206 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -239,11 +239,21 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 7 Update 1 ~ 9</b></div>
+                                    <div><b>JDK 7 Update 6 ~ 21</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u6/updates.xml">http://visualvm.java.net/uc/7u6/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 7 Update 1 ~ 5</b></div>
                                     <hr>
                                     <div><b>JDK 7</b></div>
                                     <hr>
-                                    <div><b>JDK 6 Update 30 ~ 37</b></div>
+                                    <div><b>JDK 6 Update 30 ~ 43</b></div>
                                 </td>
 
                                 <td class="plugincenter">
